--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -31,7 +31,7 @@ INDIR/SNP_INDEL_ANNO/Result/Stat/*.INDEL.length.pattern.stat.p*	OUTDIR/upload/In
 [S]=SV检测及注释	1
 INDIR/SV_ANNO/Result/*.SV.*_multianno.txt	OUTDIR/upload/SV/	copy	1
 INDIR/Stat/All.sv.*	OUTDIR/upload/SV/Stat/	copy	1
+
 [S]=CNV检测及注释	1
-INDIR/CNV/*/*.CNV*.xls	OUTDIR/upload/CNV/	copy	1
-INDIR/CNV_ANNO/*.CNV.*_multianno.txt	OUTDIR/upload/CNV/	copy	1
-INDIR/CNV_ANNO/*.CNV.*_multianno.Format.xls	OUTDIR/upload/CNV/	copy	1
+INDIR/CNV_ANNO/*/*.CNV*.xls	OUTDIR/upload/CNV/	copy	1
+INDIR/CNV/*/*.p*	OUTDIR/upload/CNV/	copy	1
