创建目录结构

--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -33,5 +33,6 @@ INDIR/SV_ANNO/Result/*.SV.*_multianno.txt	OUTDIR/upload/SV/	copy	1
 INDIR/Stat/All.sv.*	OUTDIR/upload/SV/Stat/	copy	1
 
 [S]=CNV检测及注释	1
+INDIR/CNV/*/*.CNV.raw.xls	OUTDIR/upload/CNV/	copy	1
 INDIR/CNV_ANNO/*/*.CNV*.xls	OUTDIR/upload/CNV/	copy	1
 INDIR/CNV/*/*.p*	OUTDIR/upload/CNV/	copy	1
