创建目录结构

--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -18,13 +18,13 @@ INDIR/Alignment/*/*Plot.pdf	OUTDIR/upload/MAP/	copy	1
 
 [M]=变异检测注释	1
 [S]=SNP检测及注释	1
-INDIR/SNP_INDEL_ANNO/SNP/*.SNP.*_multianno.txt	OUTDIR/upload/SNP/	link	1
-INDIR/SNP_INDEL_ANNO/SNP/*/*.SNP.*_multianno.xls	OUTDIR/upload/SNP/Samples/	link	1
+INDIR/SNP_INDEL_ANNO/*/SNP/*.SNP.*_multianno.txt	OUTDIR/upload/SNP/	link	1
+INDIR/SNP_INDEL_ANNO/*/SNP/*.SNP.*_multianno.xls	OUTDIR/upload/SNP/Samples/	link	1
 INDIR/Stat/All.snp.*	OUTDIR/upload/SNP/Stat/	copy	1
 INDIR/SNP_INDEL_ANNO/Result/Stat/*.SNP.TS_TV.stat.txt	OUTDIR/upload/SNP/Stat/	copy	1
 [S]=InDel检测及注释	1
-INDIR/SNP_INDEL_ANNO/INDEL/*.INDEL.*_multianno.txt	OUTDIR/upload/InDel/	link	1
-INDIR/SNP_INDEL_ANNO/INDEL/*/*.INDEL.*_multianno.xls	OUTDIR/upload/InDel/Samples/	link	1
+INDIR/SNP_INDEL_ANNO/*/INDEL/*.INDEL.*_multianno.txt	OUTDIR/upload/InDel/	link	1
+INDIR/SNP_INDEL_ANNO/*/INDEL/*.INDEL.*_multianno.xls	OUTDIR/upload/InDel/Samples/	link	1
 INDIR/Stat/All.indel.*	OUTDIR/upload/InDel/Stat/	copy	1
 INDIR/SNP_INDEL_ANNO/Result/Stat/*.INDEL.length.pattern.stat.p*	OUTDIR/upload/InDel/Stat/	copy	1
 
