--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -29,7 +29,7 @@ INDIR/Stat/All.indel.*	OUTDIR/upload/InDel/Stat/	copy	1
 INDIR/SNP_INDEL_ANNO/Result/Stat/*.INDEL.length.pattern.stat.p*	OUTDIR/upload/InDel/Stat/	copy	1
 
 [S]=SV检测及注释	1
-INDIR/SV/*.SV.raw.vcf	OUTDIR/upload/SV/	copy	1
+INDIR/SV/*/*.SV.raw.vcf	OUTDIR/upload/SV/	copy	1
 INDIR/SV_ANNO/Middle/*.SV.*_multianno.txt	OUTDIR/upload/SV/*1.SV_multianno.xls	copy	1
 INDIR/Stat/All.sv.*	OUTDIR/upload/SV/Stat/	copy	1
 
