创建目录结构

--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -28,6 +28,15 @@ INDIR/SNP_INDEL_ANNO/*/INDEL/*.INDEL.*_multianno.xls	OUTDIR/upload/InDel/Samples
 INDIR/Stat/All.indel.*	OUTDIR/upload/InDel/Stat/	copy	1
 INDIR/SNP_INDEL_ANNO/Result/Stat/*.INDEL.length.pattern.stat.p*	OUTDIR/upload/InDel/Stat/	copy	1
 
+[S]=SNP&InDel差异分析
+INDIR/DIFF/Result/*.venn.p*  OUTDIR/upload/SNP_INDEL_DIFF/ link    1
+INDIR/DIFF/Result/*.stat.txt  OUTDIR/upload/SNP_INDEL_DIFF/ link    1
+INDIR/DIFF/Result/*.SNP.all.overlap.Mus_musculus_multianno.txt  OUTDIR/upload/SNP_INDEL_DIFF/*1.SNP.all.overlap.Mus_musculus_multianno.xls link    1
+INDIR/DIFF/Result/*.SNP.uniq.Mus_musculus_multianno.txt  OUTDIR/upload/SNP_INDEL_DIFF/*1.SNP.uniq.Mus_musculus_multianno.xls link    1
+INDIR/DIFF/Result/*.INDEL.all.overlap.Mus_musculus_multianno.txt  OUTDIR/upload/SNP_INDEL_DIFF/*1.INDEL.all.overlap.Mus_musculus_multianno.xls link    1
+INDIR/DIFF/Result/*.INDEL.uniq.Mus_musculus_multianno.txt  OUTDIR/upload/SNP_INDEL_DIFF/*1.INDEL.uniq.Mus_musculus_multianno.xls link    1
+
+
 [S]=SV检测及注释	1
 INDIR/SV/*/*.SV.raw.vcf	OUTDIR/upload/SV/	copy	1
 INDIR/SV_ANNO/Middle/*.SV.*_multianno.txt	OUTDIR/upload/SV/*1.SV_multianno.xls	copy	1
