创建目录结构

--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -31,8 +31,8 @@ INDIR/SNP_INDEL_ANNO/Result/Stat/*.INDEL.length.pattern.stat.p*	OUTDIR/upload/In
 [S]=SNP&InDel差异分析
 INDIR/DIFF/Result/*.SNP.venn.p*	OUTDIR/upload/SNP_INDEL_DIFF/SNP/	link	1
 INDIR/DIFF/Result/*.SNP.stat.txt	OUTDIR/upload/SNP_INDEL_DIFF/SNP/	link	1
-INDIR/DIFF/Result/*.SNP.venn.p*	OUTDIR/upload/SNP_INDEL_DIFF/INDEL/	link	1
-INDIR/DIFF/Result/*.SNP.stat.txt	OUTDIR/upload/SNP_INDEL_DIFF/INDEL/	link	1
+INDIR/DIFF/Result/*.INDEL.venn.p*	OUTDIR/upload/SNP_INDEL_DIFF/INDEL/	link	1
+INDIR/DIFF/Result/*.INDEL.stat.txt	OUTDIR/upload/SNP_INDEL_DIFF/INDEL/	link	1
 INDIR/DIFF/Result/*.SNP.all.overlap.Mus_musculus_multianno.txt	OUTDIR/upload/SNP_INDEL_DIFF/SNP/	link	1
 INDIR/DIFF/Result/*.SNP.uniq.Mus_musculus_multianno.txt	OUTDIR/upload/SNP_INDEL_DIFF/SNP/	link	1
 INDIR/DIFF/Result/*.INDEL.all.overlap.Mus_musculus_multianno.txt	OUTDIR/upload/SNP_INDEL_DIFF/INDEL/	link	1
