--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -28,7 +28,7 @@ INDIR/SNP_INDEL_ANNO/*/INDEL/*.INDEL.*_multianno.xls	OUTDIR/upload/InDel/Samples
 INDIR/Stat/All.indel.*	OUTDIR/upload/InDel/Stat/	copy	1
 INDIR/SNP_INDEL_ANNO/Result/Stat/*.INDEL.length.pattern.stat.p*	OUTDIR/upload/InDel/Stat/	copy	1
 
-[S]=SNP&InDel差异分析
+[S]=SNP&InDel差异分析	1
 INDIR/DIFF/Result/*.SNP.venn.p*	OUTDIR/upload/SNP_INDEL_DIFF/SNP/	link	1
 INDIR/DIFF/Result/*.SNP.stat.txt	OUTDIR/upload/SNP_INDEL_DIFF/SNP/	link	1
 INDIR/DIFF/Result/*.INDEL.venn.p*	OUTDIR/upload/SNP_INDEL_DIFF/INDEL/	link	1
