--- a/bin/Report/config/upload.config
+++ b/bin/Report/config/upload.config
@@ -47,3 +47,7 @@ INDIR/Stat/All.sv.*	OUTDIR/upload/SV/Stat/	copy	1
 INDIR/CNV/*/*.CNV.raw.xls	OUTDIR/upload/CNV/	copy	1
 INDIR/CNV_ANNO/*/*.CNV*.xls	OUTDIR/upload/CNV/	copy	1
 INDIR/CNV/*/*.p*	OUTDIR/upload/CNV/	copy	1
+
+[S]=融合基因分析	1
+INDIR/Stat/All.Fugene*	OUTDIR/upload/FusionGene/	copy	1
+INDIR/FusionGene/*FusionReport.txt	OUTDIR/upload/FusionGene/	copy	1
